@@ -1,6 +1,7 @@
 *~
 *.dll
 *.exe
+*.nsi
 *.o
 *.rpm
 *.spec
